--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         window.addEventListener('resize', debouncedResize);
 
         // Load default PDF on page load
-        loadPDF('src/SERVICES (GBP).pdf');
+        loadPDF('src/SERVICES.pdf');
     </script>
 </body>
 </html>
