--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            background-image: url('src/PATTERN.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
         #text-container {
             position: absolute;
