--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             { text: "A creative powerhouse!", isStatement: true },
             { text: "Specializing in creativity", isStatement: false },
             { text: "And purposeful design solutions", isStatement: true },
-            { text: "This is G/VERSE.", isStatement: true }
+            { text: "G/VERSE COMING SOON!", isStatement: true }
         ];
 
         const container = document.getElementById('text-container');
