--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-image: url('src/PATTERN.png');
+            background-image: url('src/pattern.webp');
             background-size: cover;
             background-position: center;
             background-repeat: repeat;
