--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     <button id="mute-button" onclick="toggleMute()">SOUND</button>
 
     <div class="copyright">
-        © 2024 GALANACCI® GALANACCI-VERSE™
+        © 2024 GALANACCI®
     </div>
 
     <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </body>
 </html>
