--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="G/VERSE™ is a creative powerhouse focused on delivering impactful and purposeful creative solutions.">
     <title>G/VERSE - CREATIVE POWERHOUSE</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/webp" href="src/logo.webp">
