--- a/index.html
+++ b/index.html
@@ -3,30 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="G/VERSE™ is a creative powerhouse focused on delivering impactful and purposeful creative solutions.">
-    <title>G/VERSE - CREATIVE POWERHOUSE</title>
+    <title>G/VERSE - GALANACCI-VERSE</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/webp" href="src/logo.webp">
 </head>
 <body>
-    <nav class="logo-container">
-        <a href="index.html"><img src="src/logo.webp" alt="G/VERSE logo"></a>
+    <nav>
+        <div class="logo-container">
+            <a href="index.html"><img src="src/logo.webp" alt="G/VERSE logo"></a>
+        </div>
     </nav>
 
     <div id="text-container"></div>
 
     <div class="container">
-        <button id="send-enquiry" onclick="sendEnquiry()">Send Enquiry</button>
-        <button id="work-examples" onclick="openPDF('work-examples.pdf')">Work Examples</button>
-        <button id="services" onclick="openPDF('services.pdf')">Services</button>
+        <button id="send-enquiry">Send Enquiry</button>
+        <button id="work-examples">Work Examples</button>
+        <button id="services">Services</button>
     </div>
 
-    <button id="mute-button" onclick="toggleMute()">SOUND ON</button>
+    <button id="mute-button">SOUND ON</button>
 
     <div class="copyright">© 2024 GALANACCI®</div>
 
-    <audio id="typingSound" src="src/typing-sound.mp3" preload="auto"></audio>
+    <!-- Enquiry Form Pop-up -->
+    <div id="enquiry-popup" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <h2>Send Enquiry</h2>
+            <form id="enquiry-form">
+                <input type="text" id="name" name="name" required placeholder="Your Name">
+                <input type="email" id="email" name="email" required placeholder="Your Email">
+                <textarea id="message" name="message" required placeholder="Your Message"></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+    </div>
 
+    <audio id="typingSound" src="src/typing-sound.mp3" preload="auto"></audio>
     <script src="script.js"></script>
 </body>
 </html>
