--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <div class="container">
         <button id="send-enquiry">Send Enquiry</button>
-        <button id="work-examples">Work Examples</button>
-        <button id="services">Services</button>
+        <button id="work-examples" onclick="openPDF('work-examples.pdf')">Work Examples</button>
+        <button id="services" onclick="openPDF('services.pdf')">Services</button>
     </div>
 
     <div class="copyright">© 2024 GALANACCI®</div>
