--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div id="text-container"></div>
 
     <div class="container">
-        <button id="send-enquiry">Send Enquiry</button>
-        <button id="work-examples">Work Examples</button>
-        <button id="services">Services</button>
+        <button id="send-enquiry" title="Send Enquiry">Send Enquiry</button>
+        <button id="work-examples" title="Work Examples">Work Examples</button>
+        <button id="services" title="Services">Services</button>
     </div>
 
     <div class="copyright">© 2024 GALANACCI®</div>
