--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button id="services" title="Services">Services</button>
     </div>
 
-    <div class="copyright">© 2024 GALANACCI®</div>
+    <div class="copyright">© 2024 A GALANACCI® COMPANY</div>
 
     <!-- Enquiry Form Pop-up -->
     <div id="enquiry-popup" class="popup">
