--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="logo-container">
-            <a href="https://galanacci-verse.com"><img src="src/logo.webp" alt="G/VERSE logo"></a>
+            <a href="galanacci-verse.com"><img src="src/logo.webp" alt="G/VERSE logo"></a>
         </div>
     </nav>
 
