--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="text" id="name" name="name" required placeholder="Your Name">
                 <input type="email" id="email" name="_replyto" required placeholder="Your Email">
                 <textarea id="message" name="message" required placeholder="Your Message"></textarea>
-                <input type="hidden" name="_subject" value="New enquiry">
+                <input type="hidden" name="_subject" value="NEW ENQUIRY FROM G/VERSE">
                 <button type="submit">Send</button>
             </form>
         </div>
