--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="G/VERSE™ is a multi-disciplinary studio connecting the unseen dots to help you build a better business.">
+    <meta name="description" content="G/VERSE™ is a multi-disciplinary studio connecting the unseen dots to help you build a better business—your vision, our execution!">
     <title>G/VERSE™ CREATIVE POWERHOUSE</title>
     <meta property="og:title" content="G/VERSE™ CREATIVE POWERHOUSE">
-    <meta property="og:description" content="A multi-disciplinary studio connecting the unseen dots">
+    <meta property="og:description" content="A multi-disciplinary studio connecting the unseen dots to help you build a better business—your vision, our execution!">
     <meta property="og:image" content="src/backdrop.png">
     <meta property="og:url" content="https://galanacci-verse.com">
     <meta property="og:type" content="website">
