--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="G/VERSE™ - CREATIVE POWERHOUSE">
     <meta property="og:description" content="A multi-disciplinary studio connecting the unseen dots to help you build a better business—your vision, our execution!">
     <meta property="og:image" content="src/backdrop.png">
-    <meta property="og:url" content="https://galanacci-verse.com">
+    <meta property="og:url" content="galanacci-verse.com">
     <meta property="og:type" content="website">
     
     <link rel="stylesheet" href="style.css">
