--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="G/VERSE™ is a multi-disciplinary studio connecting the unseen dots to help you build a better business—your vision, our execution!">
-    <title>G/VERSE™ - CREATIVE POWERHOUSE</title>
+    <title>G/VERSE™ CREATIVE POWERHOUSE</title>
     <link rel="icon" type="image/png" href="src/logo.webp">
     <meta property="og:title" content="G/VERSE™ - CREATIVE POWERHOUSE">
     <meta property="og:description" content="A multi-disciplinary studio connecting the unseen dots to help you build a better business—your vision, our execution!">
