--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="G/VERSE™ is a multi-disciplinary studio connecting the unseen dots to help you build a better business—your vision, our execution!">
     <title>G/VERSE™ CREATIVE POWERHOUSE</title>
     <link rel="icon" type="image/png" href="src/logo.webp">
-    <meta property="og:title" content="G/VERSE™ - CREATIVE POWERHOUSE">
+    <meta property="og:title" content="G/VERSE™ CREATIVE POWERHOUSE">
     <meta property="og:description" content="A multi-disciplinary studio connecting the unseen dots to help you build a better business—your vision, our execution!">
     <meta property="og:image" content="src/backdrop.png">
     <meta property="og:url" content="galanacci-verse.com">
