--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="text-container"></div>
 
     <div class="container">
-        <button id="work-examples" title="Work Examples">Work Examples</button>
+        <button id="selected-works" title="Selected Works">Selected Works</button>
         <button id="services" title="Services">Services</button>
         <button id="send-enquiry" title="Send Enquiry">Send Enquiry</button>
     </div>
