--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="text-container"></div>
 
     <div class="container">
-        <button id="selected-works" title="Selected Works">Selected Works</button>
+        <button id="selected-works" title="Select Works">Select Works</button>
         <button id="services" title="Services">Services</button>
         <button id="send-enquiry" title="Send Enquiry">Send Enquiry</button>
     </div>
